# dimmit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  command.c  command.h  compat_ioregistry_darwin.c  compat_ioregistry_darwin.h  config.h.in  ddc.c  ddc.h  ddc_constants.h  ddc_impl.h  ddc_impl_darwin.c  ddc_impl_darwin_arch.h  ddc_impl_darwin_arm.c  ddc_impl_darwin_ddcctl.c  ddc_impl_darwin_m1ddc.m  ddc_impl_darwin_x86.c  ddc_impl_linux.c  ddc_impl_netbsd.c  ddc_impl_test.c  ddcutil_compat.c  ddcutil_compat.h  ddcutil_macos.c  ddcutil_macos.h  ddcutil_netbsd.c  ddcutil_netbsd.h  dimmer.c  dimmer.h  dimmit.c  dimmitc.c  dimmitd.c  service_netbsd.sh  test_dimmit.c
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/determine-version/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: windows-build.md  windows-feasibility-result.md
docs/superpowers/plans/: 2026-07-06-phase1-multi-external-brightness.md  2026-07-07-windows-brightness-key-capture.md  2026-07-07-windows-installer-packaging.md  2026-07-08-windows-vista-floor.md
docs/superpowers/specs/: 2026-07-06-ci-release-harmonization-design.md  2026-07-06-multi-display-and-internal-brightness-design.md  2026-07-07-windows-brightness-key-capture-design.md  2026-07-07-windows-installer-packaging-design.md  2026-07-08-windows-vista-floor-design.md
packaging/linux/: build_deb.sh
packaging/linux/scripts/: postinst  postrm  prerm
packaging/linux/templates/: dimmit.sources.in
packaging/macos/: build_pkg.sh  distribution.xml
packaging/macos/scripts/: postinstall  preinstall
packaging/windows/: dimmit.iss  smoke_test.ps1
service/: service_darwin.plist  service_darwin_agent.plist  service_darwin_install.sh  service_systemd.service
src/: brightness.c  brightness.h  command.c  command.h  dimmer.c  dimmer.h  dimmit.c  dimmitd.c  display_controller.c  display_controller.h  test_dimmit.c
src/ddc/: abstraction.c  abstraction.h  darwin.c  implementation.h  in_memory_mock.c  linux.c  netbsd.c
src/ddc/darwin/: arch.h  compat_ioregistry.c  ddcctl.c  m1ddc.m
src/platform/access-control/: access-control.h  darwin.c  linux.c  mock.c  netbsd.c  windows.c
src/platform/compat/: clock_gettime.c  clock_gettime.h  net.h
src/platform/ddc/: abstraction.c  abstraction.h  darwin.c  implementation.h  in_memory_mock.c  in_memory_mock.h  linux.c  netbsd.c  windows.c
src/platform/ddc/darwin/: arch.h  compat_ioregistry.c  compat_ioregistry.h  ddcctl.c  m1ddc.m
src/platform/input/: darwin.c  input.h  linux.c  netbsd.c  windows.c
src/platform/logging/: darwin.c  linux.c  logging.h  netbsd.c  windows.c
